--- a/public/uploadstudentfee.html
+++ b/public/uploadstudentfee.html
@@ -153,18 +153,12 @@
   <div class="sidebar" id="sidebar">
     <h2>Admin Panel</h2>
     <ul>
-      <li onclick="navigateTo('/uploadattendance')">🗓️ Upload Attendance</li>
-      <li onclick="navigateTo('/uploadmidmarks')">📈 Upload Mid Marks</li>
-      <li onclick="navigateTo('/addmycounselling')">👥 Assign Counselling</li>
-      <li onclick="navigateTo('/dumatch')">🔍 DU Match Status</li>
-      <li onclick="navigateTo('/removestudents')">🗑️ Delete Students</li>
-      <li onclick="navigateTo('/uploadstudents')">📚 Upload Student Data</li>
+     <li onclick="navigateTo('/uploadsbi')">🏦 Upload SBI References</li>
       <li onclick="navigateTo('/uploadfees')">💰 Upload Fee Structure</li>
-      <li onclick="navigateTo('/addstident')">📚 Add Student</li>
-      <li onclick="navigateTo('/staffallocation')">🧑‍🏫 Staff Period Allocation</li>
-      <li onclick="navigateTo('/downloadattendance')">📥 Download Attendance</li>
-      <li onclick="navigateTo('/editattendance')">✏️ Edit Attendance</li>
-      <li onclick="navigateTo('/sendsms')">📤 Send SMS</li>
+      <li onclick="navigateTo('/nocstatus')">📄 NOC Status</li>
+      <li onclick="navigateTo('/createnoc')">🧾 Create NOC</li>
+      <li onclick="navigateTo('/studentSfeesearch')">🔍 Student Fee Search</li>
+      <li onclick="navigateTo('/accountcopy')">📑 Account Copy Download</li>
     </ul>
     <button onclick="logout()">Logout</button>
   </div>
