--- a/public/studentsfeesearch.html
+++ b/public/studentsfeesearch.html
@@ -166,11 +166,13 @@
     <h2>Accounts Panel</h2>
     <ul>
       <li onclick="navigateTo('/uploadsbi')">🏦 Upload SBI References</li>
+      <li onclick="navigateTo('/uploadfees')">💰 Upload Fee Structure</li>
       <li onclick="navigateTo('/nocstatus')">📄 NOC Status</li>
       <li onclick="navigateTo('/createnoc')">🧾 Create NOC</li>
       <li onclick="navigateTo('/studentSfeesearch')">🔍 Student Fee Search</li>
       <li onclick="navigateTo('/accountcopy')">📑 Account Copy Download</li>
-    </ul>    <button onclick="logout()">🚪 Logout</button>
+    </ul>   
+    <button onclick="logout()">🚪 Logout</button>
   </div>
 
   <div class="main">
