--- a/public/accountcopy.html
+++ b/public/accountcopy.html
@@ -77,6 +77,7 @@
     <h2>Accounts Panel</h2>
     <ul>
       <li onclick="navigateTo('/uploadsbi')">🏦 Upload SBI References</li>
+      <li onclick="navigateTo('/uploadfees')">💰 Upload Fee Structure</li>
       <li onclick="navigateTo('/nocstatus')">📄 NOC Status</li>
       <li onclick="navigateTo('/createnoc')">🧾 Create NOC</li>
       <li onclick="navigateTo('/studentSfeesearch')">🔍 Student Fee Search</li>
